Updates from last year, added resume, added math project 4.

--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Acrylicorner - Demos</title>
+        <title>Holden Profit - Demos</title>
         <link rel="stylesheet" href="aidemo.min.css"/>
 
         <style>
