--- a/presentations/howToUseJasmine.html
+++ b/presentations/howToUseJasmine.html
@@ -45,7 +45,7 @@
             <h1>AngularJS Testing with Jasmine</h1>
             <h4>Javascript testing made easy</h4>
             <p>
-                <small>Created by Holden Profit <br/>( <a href="https://github.com/Acrylico">https://github.com/Acrylico</a> )</small>
+                <small>Created by Holden Profit <br/>( <a href="https://github.com/hprofit">https://github.com/hprofit</a> )</small>
             </p>
         </section>
 
@@ -192,7 +192,7 @@
             <h4>Questions? Concerns?</h4>
             <p>
                 <small>Feel free to contact me at: hprofit@icct.com <br/>
-                    Also look me up on github at <a href="https://github.com/Acrylico">https://github.com/Acrylico</a>!</small>
+                    Also look me up on github at <a href="https://github.com/hprofit">https://github.com/hprofit</a>!</small>
             </p>
         </section>
     </div>
