--- a/presentations/introToGaming_part1.html
+++ b/presentations/introToGaming_part1.html
@@ -217,7 +217,7 @@ tearDown();
             <section>
                 <h3>2-Dimensional Coordinates</h3>
                 <p>
-                    My guide to basic vector principals can be found <a href="http://acrylicorner.com/presentations/swarmIntelligence.html#/4" target="_blank">here.</a>
+                    My guide to basic vector principals can be found <a href="http://holdenprofit.com/presentations/swarmIntelligence.html#/4" target="_blank">here.</a>
                     <br>
                     <span class="fragment fade-in">
                         Vectors are a way to represent direction and velocity while Points represent a location in space.
