--- a/presentations/introToGaming_part4.html
+++ b/presentations/introToGaming_part4.html
@@ -540,7 +540,7 @@ const depthFirstSearch = function(graph, node, cameFrom, goal) {
                     <a href="https://en.wikipedia.org/wiki/A*_search_algorithm#Pseudocode" target="_blank">Pseudo Code</a>
                     <br>
                     <br>
-                    <a href="http://acrylicorner.com/demos/#/astar" target="_blank">See it in action!</a>
+                    <a href="http://holdenprofit.com/demos/#/astar" target="_blank">See it in action!</a>
                 </p>
             </section>
         </section>
