--- a/presentations/swarmIntelligence.html
+++ b/presentations/swarmIntelligence.html
@@ -714,7 +714,7 @@
 
                 <section>
                     <h1>
-                        <a href="http://acrylicorner.com/demos/#/flock">Demo!</a>
+                        <a href="http://holdenprofit.com/demos/#/flock">Demo!</a>
                     </h1>
                 </section>
 
